hds-osc/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hds-osc

spec:
  entryPoints:
    - websecure
  tls:
    secretName: hds-osc-tls
  routes:
    - kind: Rule
      match: Host(`hds-osc.toki317.dev`)
      services:
        - namespace: hds-osc
          kind: Service
          name: hds-osc
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
